# Snibox

./: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.sh  configure-updater.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  sync_state.rs
src-tauri/src/commands/: clipboard.rs  drafts.rs  drive.rs  mod.rs  settings.rs  snippets.rs  sync.rs  vault.rs  window.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs
src-tauri/src/drive/: api.rs  auth.rs  conflict.rs  mod.rs  sync.rs  worker.rs
src-tauri/src/vault/: conflict.rs  format.rs  mod.rs  watcher.rs
src/components/Editor/: ContentArea.tsx  Editor.tsx  EditorActions.tsx  TagsInput.tsx  TitleInput.tsx
src/components/Launcher/: EmptyState.tsx  FilterChips.tsx  Launcher.tsx  LauncherFooter.tsx  PreviewModal.tsx  SearchInput.tsx  ShortcutHints.tsx  SnippetRow.tsx  useLauncherActions.ts
src/components/Settings/: AppearanceSection.tsx  Settings.tsx  ShortcutRecorder.tsx  ShortcutSettings.tsx  SyncSection.tsx  UpdatesSection.tsx
src/components/Shared/: ConfirmDialog.tsx  ErrorBoundary.tsx  RestoreDraft.tsx  Toast.tsx  UpdateBanner.tsx
src/components/Sync/: ConflictCard.tsx  ConflictInbox.tsx  SyncCenter.tsx  SyncOnboarding.tsx
src/lib/: commands.ts  conflictUtils.ts  keybinds.ts  palettes.ts  platform.ts  search.test.ts  search.ts  useFocusTrap.ts
src/stores/: driveStore.ts  editorStore.ts  keybindStore.ts  settingsStore.ts  snippetStore.ts  syncStore.test.ts  syncStore.ts  updaterStore.ts  vaultStore.ts
src/styles/: globals.css  tokens.ts
