[package]
name = "snibox"
version = "0.1.0"
description = "A fast snippet bank and paste launcher"
authors = ["Snibox"]
edition = "2021"

[lib]
name = "snibox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
notify = "7"
hostname = "0.4"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
oauth2 = "5"
tauri-plugin-oauth = "2"
serde_urlencoded = "0.7"
tauri-plugin-opener = "2"
enigo = { version = "0.2", features = ["wayland"] }
